--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6{
     border: 1px solid #fff;
 }
 
-#text{
+#text,#message{
     background-color: #fff;
     border: 1px solid #fff;
     border-radius: 5px;
