--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-    background-color: #000;
+    /* give light blue awesome background */
+    background-color: rgb(47, 145, 231);
+
     color: #fff;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
@@ -13,6 +15,23 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     margin: 0 0 1.5rem 0;
+}
+/* Add create button next to the heading */
+
+
+#create{
+    background-color: #fff;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    color: #000;
+    cursor: pointer;
+    font-size: 1rem;
+    padding: 0.5rem;
+    /* Place create button next to the heading */
+    position: absolute;
+    left: 450px;
+    top: 8px;
+
 }
 
 .container{
@@ -77,5 +96,11 @@ button:hover{
 @media only screen and (max-width: 600px) {
     .container{
         width: 50%;
+    }
+    /* Change the position of create button */
+    #create{
+      /* clear the position of create button  and place it below the heading */
+        position: static;
+        margin-bottom: 1rem;
     }
 }
